# funda-smoke-tests

./: README.md  conftest.py  pyproject.toml  pytest.ini
funda/tests/: config.py
funda/tests/features/: smoke_tests.feature  test_steps_TC1_home_page.py  test_steps_TC2_search_function.py  test_steps_TC3_property_details.py  test_steps_TC4_contact_form.py  test_steps_TC5_important_links.py
funda/tests/pages/: base_page.py  contact_page.py  home_page.py  listing_page.py  property_deatils_page.py  search_result_page.py
