[project]
name = "funda"
version = "0.1.0"
description = "Automated smoke tests for Funda website"
authors = [
    {name = "Aparna Ijjada ",email = "aparna.ijjada@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium (>=4.28.1,<5.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-xdist (>=3.6.1,<4.0.0)",
    "pytest-bdd (>=8.1.0,<9.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"

